--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
+    id "kotlin-kapt"
+
+    // Hilt
+    id "com.google.dagger.hilt.android"
 }
 
 android {
@@ -34,6 +38,7 @@ android {
         jvmTarget = "1.8"
     }
     buildFeatures {
+        buildConfig true
         compose true
     }
     composeOptions {
@@ -47,20 +52,64 @@ android {
 }
 
 dependencies {
-
+    // Android
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
-    implementation "androidx.activity:activity-compose:1.8.2"
-    implementation platform("androidx.compose:compose-bom:2023.08.00")
-    implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.ui:ui-graphics"
-    implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation "androidx.compose.material3:material3"
+
+    // Test
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    androidTestImplementation platform("androidx.compose:compose-bom:2023.08.00")
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    androidTestImplementation "app.cash.turbine:turbine:0.12.1"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.5.0"
+
+    // Compose
+    implementation platform("androidx.compose:compose-bom:2023.08.00")
+    implementation "androidx.activity:activity-compose:1.8.2"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling-preview"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
+    androidTestImplementation platform("androidx.compose:compose-bom:2023.08.00")
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+
+    // Coroutines
+    def coroutines_version = "1.7.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.7.6"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
+
+    // Retrofit
+    def retrofit_version = "2.9.0"
+    def okhttp_version = "4.12.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+
+    // Room
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    //noinspection KaptUsageInsteadOfKsp
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Timber
+    implementation "com.jakewharton.timber:timber:5.0.1"
+
+    // ViewModel
+    def lifecycle_version = "2.6.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
 }
